# irecord

./: .gitignore  configure  configure.ac
src/: Makefile.am  Makefile.in  irecord.c  irecord.h
